--- a/myemoticon/emoticon/templates/base.html
+++ b/myemoticon/emoticon/templates/base.html
@@ -1,10 +1,70 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+
+    <title>{% block title %}{% endblock %}</title>
+	<meta name="keywords" content="" />
+	<meta name="description" content="" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset="UTF-8">
+
+	<!-- CSS Bootstrap & Custom -->
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/animate.css">
+	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/templatemo_misc.css">
+
+	<!-- Main CSS -->
+	<link rel="stylesheet" href="css/templatemo_style.css">
+
+	<!-- Favicons -->
+	<link rel="shortcut icon" href="images/ico/favicon.ico">
+
 </head>
 <body>
 
+	<div class="site-header">
+		<div class="main-navigation">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12 main_menu">
+						<ul>
+							<li><a class="show-1 templatemo_home" href="#">Gallery</a></li>
+							<li><a class="show-2 templatemo_page2" href="#">Products</a></li>
+							<li><a class="show-3 templatemo_page3" href="#">Services</a></li>
+							<li><a class="show-4 templatemo_page4" href="#">About Us</a></li>
+							<li><a class="show-5 templatemo_page5" href="#">Contact Us</a></li>
+						</ul>
+					</div> <!-- /.col-md-12 -->
+				</div> <!-- /.row -->
+			</div> <!-- /.container -->
+		</div> <!-- /.main-navigation -->
+	</div> <!-- /.site-header -->
+
+
+	<div class="content homepage" id="menu-1">
+        {% block content %}
+        {% endblock %}
+	</div> <!-- /.homepage -->
+
+
+	<div id="templatemo_footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <p>Copyright &copy; 2084 Your Company Name</p>
+                </div> <!-- /.col-md-12 -->
+            </div> <!-- /.row -->
+        </div> <!-- /.container -->
+    </div> <!-- /.templatemo_footer -->
+
+
+	<!-- Scripts -->
+	<script src="js/jquery-1.10.2.min.js"></script>
+	<script src="js/jquery-migrate-1.2.1.min.js"></script>
+	<script src="js/modernizr.js"></script>
+	<script src="js/bootstrap.js"></script>
+	<script src="js/tabs.js"></script>
+	<script src="js/jquery.lightbox.js"></script>
+	<script src="js/templatemo_custom.js"></script>
 </body>
 </html>
