--- a/myemoticon/emoticon/templates/base.html
+++ b/myemoticon/emoticon/templates/base.html
@@ -1,70 +1,127 @@
 <!DOCTYPE html>
+<html>
 <head>
-
-    <title>{% block title %}{% endblock %}</title>
-	<meta name="keywords" content="" />
-	<meta name="description" content="" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta charset="UTF-8">
-
-	<!-- CSS Bootstrap & Custom -->
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/animate.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/templatemo_misc.css">
-
-	<!-- Main CSS -->
-	<link rel="stylesheet" href="css/templatemo_style.css">
-
-	<!-- Favicons -->
-	<link rel="shortcut icon" href="images/ico/favicon.ico">
-
+    <title>base</title>
+    <meta charset="UTF-8">
+    <!-- 新 Bootstrap 核心 CSS 文件 -->
+    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <!-- 可选的Bootstrap主题文件（一般不使用） -->
+    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"></script>
+    <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
+    <script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
+    <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
+    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
 
-	<div class="site-header">
-		<div class="main-navigation">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12 main_menu">
-						<ul>
-							<li><a class="show-1 templatemo_home" href="#">Gallery</a></li>
-							<li><a class="show-2 templatemo_page2" href="#">Products</a></li>
-							<li><a class="show-3 templatemo_page3" href="#">Services</a></li>
-							<li><a class="show-4 templatemo_page4" href="#">About Us</a></li>
-							<li><a class="show-5 templatemo_page5" href="#">Contact Us</a></li>
-						</ul>
-					</div> <!-- /.col-md-12 -->
-				</div> <!-- /.row -->
-			</div> <!-- /.container -->
-		</div> <!-- /.main-navigation -->
-	</div> <!-- /.site-header -->
+<nav class="navbar navbar-default" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#">Emoticon</a>
+        </div>
+        <div>
+            <ul class="nav navbar-nav navbar-left">
+                <li><a href="#">套图</a></li>
+                <li><a href="#">表情</a></li>
+            </ul>
+
+            <form class="navbar-form navbar-left">
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Search">
+                </div>
+                <button type="submit" class="btn btn-default">搜索</button>
+            </form>
+
+            <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                       aria-expanded="false">关于<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">没</a></li>
+                        <li><a href="#">有</a></li>
+                        <li><a href="#">说</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="#">明</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav><!--navbar-->
+
+{% block content %}
+{% endblock %}
 
 
-	<div class="content homepage" id="menu-1">
-        {% block content %}
-        {% endblock %}
-	</div> <!-- /.homepage -->
+<div class="container col-sm-12">
+    <div class="container col-sm-6 col-lg-offset-3 list-group-item">
+        <div class="col-sm-9 header-bar" style="font-size: large">intro text</div>
+        <div class="col-sm-3 header-bar" style="font-size: large">date</div>
+        <div class="col-sm-3">
+            <a href="#">
+                <img class="thumbnail img-responsive" src="//placehold.it/200x200/2255EE">
+            </a>
+        </div>
+        <div class="col-sm-3">
+            <a href="#">
+                <img class="thumbnail img-responsive" src="//placehold.it/200x200/2255EE">
+            </a>
+        </div>
+        <div class="col-sm-3">
+            <a href="#">
+                <img class="thumbnail img-responsive" src="//placehold.it/200x200/2255EE">
+            </a>
+        </div>
+        <div class="col-sm-3">
+            <a href="#">
+                <img class="thumbnail img-responsive" src="//placehold.it/200x200/2255EE">
+            </a>
+        </div>
+    </div><!--container-->
+</div><!--container-->
 
+<div class="container col-sm-6 col-lg-offset-3 list-group-item">
+    <div class="col-xs-6 col-sm-3">
+        <a href="#">
+            <img class="thumbnail img-responsive" src="//placehold.it/200x200">
+        </a>
+    </div>
+    <div class="col-xs-6 col-sm-3">
+        <a href="#">
+            <img class="thumbnail img-responsive" src="//placehold.it/200x200">
+        </a>
+    </div>
+    <div class="col-xs-6 col-sm-3">
+        <a href="#">
+            <img class="thumbnail img-responsive" src="//placehold.it/200x200">
+        </a>
+    </div>
+    <div class="col-xs-6 col-sm-3">
+        <a href="#">
+            <img class="thumbnail img-responsive" src="//placehold.it/200x200">
+        </a>
+    </div>
+    <div class="col-xs-6 col-sm-3">
+        <a href="#">
+            <img class="thumbnail img-responsive" src="//placehold.it/200x200">
+        </a>
+    </div>
+    <div class="col-xs-6 col-sm-3">
+        <a href="#">
+            <img class="thumbnail img-responsive" src="//placehold.it/200x200">
+        </a>
+    </div>
+    <div class="col-xs-6 col-sm-3">
+        <a href="#">
+            <img class="thumbnail img-responsive" src="//placehold.it/200x200">
+        </a>
+    </div>
+    <div class="col-xs-6 col-sm-3">
+        <a href="#">
+            <img class="thumbnail img-responsive" src="//placehold.it/200x200">
+        </a>
+    </div>
+</div><!--container-->
 
-	<div id="templatemo_footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 text-center">
-                    <p>Copyright &copy; 2084 Your Company Name</p>
-                </div> <!-- /.col-md-12 -->
-            </div> <!-- /.row -->
-        </div> <!-- /.container -->
-    </div> <!-- /.templatemo_footer -->
-
-
-	<!-- Scripts -->
-	<script src="js/jquery-1.10.2.min.js"></script>
-	<script src="js/jquery-migrate-1.2.1.min.js"></script>
-	<script src="js/modernizr.js"></script>
-	<script src="js/bootstrap.js"></script>
-	<script src="js/tabs.js"></script>
-	<script src="js/jquery.lightbox.js"></script>
-	<script src="js/templatemo_custom.js"></script>
 </body>
 </html>
