--- a/myemoticon/emoticon/templates/emoticon/article_list.html
+++ b/myemoticon/emoticon/templates/emoticon/article_list.html
@@ -2,22 +2,19 @@
 
 {% block title %}My Blog{% endblock %}
 
+
 {% block content %}
-    <h1>My Blog</h1>
-    {% if tag %}
-        <h2>Posts tagged with "{{ tag.name }}"</h2>
-    {% endif %}
+<div class="container col-sm-12">
     {% for article in articles %}
-        <h2><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></h2>
-        <p class="tags">
-            Tags: 
-            {% for tag in article.tags.all %}
-                <a href="{{ tag.slug }}">{{ tag.name }}</a>
-                {% if not forloop.last %}, {% endif %}
-            {% endfor %}
-        </p>
-        <p class="date">Published {{ article.publish }} by {{ article.author }}</p>
+    <div class="container col-sm-6 col-lg-offset-3 list-group-item">
+        <div class="col-sm-9 header-bar" style="font-size: large">{{ article.title }}</div>
+        <div class="col-sm-3 header-bar" style="font-size: large">{{ article }}</div>
+        <div class="col-sm-3">
+            <a href="#">
+                <img class="thumbnail img-responsive" src="//placehold.it/200x200/2255EE">
+            </a>
+        </div>
+    </div><!--container-->
     {% endfor %}
-    
-    {% include "pagination.html" with page=posts %}
+</div><!--container-->
 {% endblock %}
