--- a/myemoticon/emoticon/templates/emoticon/article_list.html
+++ b/myemoticon/emoticon/templates/emoticon/article_list.html
@@ -8,12 +8,14 @@
     {% for article in articles %}
     <div class="container col-sm-6 col-lg-offset-3 list-group-item">
         <div class="col-sm-9 header-bar" style="font-size: large">{{ article.title }}</div>
-        <div class="col-sm-3 header-bar" style="font-size: large">{{ article }}</div>
+        <div class="col-sm-3 header-bar" style="font-size: large">{{ article.date }}</div>
+        {% for photos in article.first_4_photo %}
         <div class="col-sm-3">
             <a href="#">
-                <img class="thumbnail img-responsive" src="//placehold.it/200x200/2255EE">
+                <img class="thumbnail img-responsive" src="http://10.20.136.163/emoticon{{ photos }}">
             </a>
         </div>
+        {% endfor %}
     </div><!--container-->
     {% endfor %}
 </div><!--container-->
