--- a/myemoticon/emoticon/templates/pagination.html
+++ b/myemoticon/emoticon/templates/pagination.html
@@ -1,15 +1,11 @@
-<div class="pagination">
-    <span class="step-links">
-        {% if page.has_previous %}
-            <a href="?page={{ page.previous_page_number }}">Previous</a>
-        {% endif %}
-
-        <span class="current">
-            Page {{ page.number }} of {{ page.paginator.num_pages }}.
-        </span>
-
-        {% if page.has_next %}
-            <a href="?page={{ page.next_page_number }}">Next</a>
-        {% endif %}
-    </span>
+<div class="container">
+    <ul class="pagination">
+        <li><a href="?page=1">«</a></li>
+        {% for i in pages %}
+            <li {% if page_no == i %} class="active" {% endif %}>
+                <a href="?page={{ i }}">{{ i }}</a>
+            </li>
+        {% endfor %}
+        <li><a href="?page={{ num_pages }}">»</a></li>
+    </ul>
 </div>
