--- a/myemoticon/emoticon/templates/pagination.html
+++ b/myemoticon/emoticon/templates/pagination.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container text-center">
     <ul class="pagination">
         <li><a href="?page=1">«</a></li>
         {% for i in pages %}
