--- a/myemoticon/emoticon/templates/emoticon/photo_detail.html
+++ b/myemoticon/emoticon/templates/emoticon/photo_detail.html
@@ -1,18 +1,19 @@
 {% extends "base.html" %}
 
-{% block title %}{{ article.title }}{% endblock %}
+{% block title %}{{ photo.title }}{% endblock %}
 
 {% block content %}
 <div class="container col-sm-12">
     <div class="container col-sm-6 col-lg-offset-3 list-group-item">
-        <div class="col-sm-12 header-bar" style="font-size: large">{{ article.title }}</div>
-        <div class="col-sm-12 header-bar" style="font-size: large">{{ article.date }}</div>
-        {% for photo in photos %}
+        <div class="col-sm-12 header-bar" style="font-size: large">{{ photo.title }}</div>
+        <div class="col-sm-12 header-bar" style="font-size: large">{{ photo.date }}</div>
         <div class="col-sm-3">
-            <a href="{% url 'emoticon:photo_detail' photo_old_id=photo.old_id %}">
+            <a href="#">
                 <img class="thumbnail img-responsive" src="http://10.20.136.163/emoticon{{ photo.url }}">
             </a>
         </div>
+        {% for tag in tags %}
+            {{ tag }}
         {% endfor %}
     </div><!--container-->
 </div><!--container-->
