--- a/myemoticon/emoticon/templates/emoticon/standalone_photo_list.html
+++ b/myemoticon/emoticon/templates/emoticon/standalone_photo_list.html
@@ -8,7 +8,7 @@
     <div class="container col-sm-6 col-lg-offset-3 list-group-item">
         {% for photo in standalone_photos %}
         <div class="col-xs-6 col-sm-3" style="height: 200px; width: 200px">
-            <a href="#">
+            <a href="{% url 'emoticon:article_detail' article_old_id=article.old_id  %}">
                 <img class="img-responsive" src="http://10.20.136.163/emoticon{{ photo.url }}">
             </a>
         </div>
