--- a/myemoticon/emoticon/templates/emoticon/standalone_photo_list.html
+++ b/myemoticon/emoticon/templates/emoticon/standalone_photo_list.html
@@ -7,11 +7,11 @@
 {% block content %}
     <div class="container col-sm-6 col-lg-offset-3 list-group-item">
         {% for photo in standalone_photos %}
-        <div class="col-xs-6 col-sm-3" style="height: 200px; width: 200px">
-            <a href="{% url 'emoticon:article_detail' article_old_id=article.old_id  %}">
-                <img class="img-responsive" src="http://10.20.136.163/emoticon{{ photo.url }}">
-            </a>
-        </div>
+            <div class="col-xs-6 col-sm-3" style="height: 200px; width: 200px">
+                <a href="{% url 'emoticon:photo_detail' photo_old_id=photo.old_id %}">
+                    <img class="img-responsive" src="http://10.20.136.163/emoticon{{ photo.url }}">
+                </a>
+            </div>
         {% endfor %}
     </div><!--container-->
     {% paginate %}
