--- a/mytv/show/templates/show/show_list.html
+++ b/mytv/show/templates/show/show_list.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}首页{% endblock %}
+{% block title %}Page {{ shows.number }}{% endblock %}
 {% block content %}
     <div class="row">
         <div class="col-md-12">
@@ -13,7 +13,7 @@
                 </tr>
                 </thead>
                 <tbody>
-                {% for show in name_hits %}
+                {% for show in shows %}
                     <tr>
                         <th scope="row">{{ show.show_id }}</th>
                         <td><a href="{% url "single_show" show.show_id %}" target="_blank">{{ show.name }}</a></td>
@@ -24,5 +24,25 @@
                 </tbody>
             </table>
         </div>
+
+        <div class="pagination col-md-12">
+            <span class="step-links">
+                {% if shows.has_previous %}
+                    <a href="?page=1">&laquo; first</a>
+                    <a href="?page={{ shows.previous_page_number }}">previous</a>
+                {% endif %}
+
+                <span class="current">
+                    Page {{ shows.number }} of {{ shows.paginator.num_pages }}.
+                </span>
+
+                {% if shows.has_next %}
+                    <a href="?page={{ shows.next_page_number }}">next</a>
+                    <a href="?page={{ shows.paginator.num_pages }}">last &raquo;</a>
+                {% endif %}
+            </span>
+        </div>
+
+
     </div>
 {% endblock %}
