--- a/mytv/templates/base.html
+++ b/mytv/templates/base.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/4.0.4/echarts.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.js"></script>
@@ -13,12 +12,13 @@
 </head>
 
 <body>
-<nav class="navbar bg-light navbar-expand-lg navbar-light">
-    <a class="navbar-brand" href="#">结果查看</a>
-    <div class="collapse navbar-collapse large" id="navbarSupportedContent">
+
+<nav class="navbar bg-light navbar-expand-lg navbar-expand-sm navbar-light">
+    <a class="navbar-brand" href="/">首页</a>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="/" target="_blank">网站首页</a>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'show_list' %}" target="_blank">列表页 </a>
             </li>
             <li>
                 <form method="get" action="{% url 'search_name' %}" target="_blank">
