--- a/mytv/show/templates/show/search_results.html
+++ b/mytv/show/templates/show/search_results.html
@@ -2,27 +2,6 @@
 {% block title %}首页{% endblock %}
 {% block content %}
     <div class="row">
-        <div class="col-md-12">
-            <table class="table">
-                <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Actor</th>
-                    <th scope="col">Duration</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for show in name_hits %}
-                    <tr>
-                        <th scope="row">{{ show.show_id }}</th>
-                        <td><a href="{% url "single_show" show.show_id %}" target="_blank">{{ show.name }}</a></td>
-                        <td><a href="{% url "single_actor" show.actor %}" target="_blank">{{ show.actor }}</a></td>
-                        <td>{{ show.duration }}</td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-        </div>
+        {% include 'show/detail_list_snippet.html' with shows=name_hits %}
     </div>
 {% endblock %}
