--- a/mytv/show/templates/show/show_list.html
+++ b/mytv/show/templates/show/show_list.html
@@ -2,29 +2,7 @@
 {% block title %}Page {{ shows.number }}{% endblock %}
 {% block content %}
     <div class="row">
-        <div class="col-md-12">
-            <table class="table">
-                <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Actor</th>
-                    <th scope="col">Duration</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for show in shows %}
-                    <tr>
-                        <th scope="row">{{ show.show_id }}</th>
-                        <td><a href="{% url "single_show" show.show_id %}" target="_blank">{{ show.name }}</a></td>
-                        <td><a href="{% url "single_actor" show.actor %}" target="_blank">{{ show.actor }}</a></td>
-                        <td>{{ show.duration }}</td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-        </div>
-
+        {% include 'show/detail_list_snippet.html' with shows=shows %}
         <div class="pagination col-md-12">
             <span class="step-links">
                 {% if shows.has_previous %}
