--- a/mytv/show/templates/show/single_show.html
+++ b/mytv/show/templates/show/single_show.html
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-md-12">
             <video controls playsinline>
-                <source src="{{ video }}" type="video/mp4">
+                <source src="{{ show.video_cache_url }}" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
